@@ -1,12 +1,12 @@
 package com.algaworks.algalog.api.assembler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import com.algaworks.algalog.api.model.EntregaDto;
+import com.algaworks.algalog.api.model.input.EntregaInput;
 import com.algaworks.algalog.domain.model.Entrega;
 
 import lombok.AllArgsConstructor;
@@ -24,6 +24,10 @@ public class EntregaAssembler {
 	public List<EntregaDto> toCollectionModel(List<Entrega> entregas) {
 		return entregas.stream()
 				.map(this::toModel)
-				.collect(Collectors.toList());
+				.toList();				
+	}
+	
+	public Entrega toEntity(EntregaInput entregaInput) {
+		return modelmapper.map(entregaInput, Entrega.class);
 	}
 }
